syntax = "proto3";

package DataBase;

message DBPlayer
{
	uint64 uin = 1;
	string nickname = 2;
	repeated DBCurrency currency = 3;

}

message DBCurrency
{
	int32 id = 1;
	uint32 nums = 2;
}
enum AuthType {
	Test = 0;
}
message DBAccount {
	AuthType type = 1;
	string account = 2;
	uint64 uin = 3;
}

message DBUin
{
	int32 zone = 1;
	uint64 nums = 2;
}